adição do botão

--- a/bingo.css
+++ b/bingo.css
@@ -1,6 +1,6 @@
 body, html{
 
-    background-color: rgb(255, 255, 255);
+    background-color: #4b4b4b;
     margin: 0%;
     padding: 0%;
     display: flex;
