--- a/bingo.css
+++ b/bingo.css
@@ -1,6 +1,6 @@
 body, html{
 
-    background-color: #4b4b4b;
+    background-color: #b4b4b4;
     margin: 0%;
     padding: 0%;
     display: flex;
